Final fixes  for mobile overflow

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,9 @@ li {
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
-
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
   cursor: pointer;
 }
 
@@ -139,7 +141,7 @@ button.remove-btn:hover {
 }
 
 .taskInput {
-  width: 350px;
+  width: 290px;
   border-radius: 3px;
 }
 
@@ -189,11 +191,15 @@ button.remove-btn:hover {
 .doneEmoji {
   position: absolute;
   font-size: 1rem;
+  left: 20px;
+  /* top: 50%;
+  transform: translateY(); */
 }
 
 .taskLineContainer {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .completed {
@@ -257,6 +263,7 @@ button.remove-btn:hover {
   border-radius: 4px;
   border: 1px solid #000000;
   font-weight: 400;
+  max-width: fit-content;
 }
 
 @media (max-width: 500px) {
@@ -265,10 +272,30 @@ button.remove-btn:hover {
     gap: 10px;
   }
 
-  .btnContainer {
-    flex-direction: column;
+  .taskLineContainer {
+    gap: 5px;
   }
 
+  .taskTextContainer {
+    width: 300px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .btnContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  #themeBtn {
+    align-self: flex-end;
+  }
+
+  .btnContainer button {
+    width: 100%; /* Let button fit content instead of 100% */
+    align-self: flex-end; /* Optional: align buttons to right */
+  }
   #right {
     flex-direction: column;
     gap: 5px;
